--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "node ./node_modules/vscode/bin/test"
     },
-    "dependencies": {},
+    "dependencies": {
+        "fs": "0.0.1-security",
+        "path": "^0.12.7"
+    },
     "devDependencies": {
         "eslint": "^4.19.1",
         "vsce": "^1.50.0",
