Added details when status bar is clicked on

--- a/package.json
+++ b/package.json
@@ -48,6 +48,13 @@
                     }
                 }
             }
+        ],
+        "commands": [
+            {
+                "command": "codepoint.describe",
+                "title": "Unicode Details",
+                "category": "Code Point"
+            }
         ]
     },
     "scripts": {
