Added unicode statusbar style

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
                         "enum": [
                             "decimal",
                             "hexadecimal",
+                            "unicode",
                             "description"
                         ],
                         "description": "Determines what gets shown in statusbar by default."
