--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
                         "type": "string",
                         "default": "hexadecimal",
                         "enum": [
+                            "none",
                             "decimal",
                             "hexadecimal",
                             "unicode",
