Changed default statusbar to unicode

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
                 "properties": {
                     "codepoint.statusbar": {
                         "type": "string",
-                        "default": "hexadecimal",
+                        "default": "unicode",
                         "enum": [
                             "none",
                             "decimal",
