--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,17 @@
         "es6": true,
         "node": true
     },
-    "extends": [
+    "parserOptions": {
+        "ecmaVersion": 2017
+     },
+     "extends": [
         "eslint:recommended"
-    ]
+    ],
+    "rules": {
+        "indent":          [ "error", 4 ],
+        "linebreak-style": [ "error", "unix" ],
+        "no-console":      "off",
+        "quotes":          [ "error", "single" ],
+        "semi":            [ "error", "never" ],
+   }
 }
